kubernetes/canvassahelm/templates/canvassa-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canvassa-app 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canvassa-frontend
  template:
    metadata:
      labels:
        app: canvassa-frontend
    spec:
      containers:
        - name: canvassa-frontend
          image: canvassa/c09:frontend
          imagePullPolicy: "Always"
          resources:
            limits:
              memory: "1024Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
      containers:
        - name: canvassa-backend
          image: canvassa/c09:backend
          imagePullPolicy: "Always"
          resources:
            limits:
              memory: "1024Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
