kubernetes/canvassahelm/templates/canvassa-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canvassa-ingress
  labels:
    name: myingress
spec:
  rules:
    - host: canvassa.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: canvass-frontend-service
                port:
                  number: 80
          - pathType: Prefix
            path: "/backend"
            backend:
              service:
                name: canvass-backend-service
                port:
                  number: 5000
